name:              hackage-mirror
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Hideyuki Tanaka
maintainer:        Hideyuki Tanaka
synopsis:          Unofficial mirror of HackageDB
description:       Unofficial mirror of HackageDB <http://hackage.haskell.org/packages/hackage.html>
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://hackage.haskell.biz/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Haddock
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development

                     Handler.Files
                     Handler.Home
                     Handler.Packages
                     Handler.Upload

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RecordWildCards
                ViewPatterns

    build-depends: base                          >=4.5
                 , yesod                         ==1.1.*
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-test                    >=0.3
                 , clientsession                 >=0.8
                 , bytestring                    >=0.9 && <0.11
                 , text                          ==0.11.*
                 , persistent                    ==1.0.*
                 , persistent-sqlite             ==1.0.*
                 , template-haskell
                 , hamlet                        ==1.1.*
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , hjsmin                        >=0.1
                 , monad-control                 >=0.3
                 , wai                           ==1.3.*
                 , wai-extra
                 , warp                          >=1.3
                 , yaml                          >=0.8
                 , http-conduit                  ==1.6.*
                 , directory
                 , time
                 , old-locale
                 , mtl
                 , blaze-builder
                 , http-types
                 , conduit
                 , data-default
                 , regex-tdfa
                 , yesod-paginator
                 , shelly
                 , system-filepath
                 , Cabal
                 , haddock
                 , ghc
                 , ghc-paths
                 , blaze-html

executable         hackage-crawler
    if flag(library-only)
        Buildable: False

    main-is:           ../crawler.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , mtl
                     , bytestring
                     , text
                     , blaze-builder
                     , configurator              >=0.2
                     , shelly                    >=0.14
                     , system-filepath
                     , system-fileio
                     , directory
                     , conduit
                     , http-conduit
                     , time
                     , old-locale
                     , persistent
                     , persistent-sqlite
                     , shakespeare-text
                     , tar
                     , zlib

                     , hackage-mirror
                     , yesod-default

executable         hackage-mirror
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , hackage-mirror
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends:     base
                     , hackage-mirror
                     , yesod-test
                     , yesod-default
                     , yesod-core
